<resources>
    <string name="app_name">BTV_FW</string>
    <string name="ui">LD UI </string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="update_error">Download failure , please try again</string>
    <string name="update_info">BTVi3 FW have a new version ,update now.</string>
    <string name="pass">Pass</string>
    <string name="detail">Detail</string>
    <string name="ad">Advertisement</string>
    <string name="delete">Delete All</string>
    <string name="network_disconnect">Network Disconnect</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="wind_unit">m/s</string>
    <string name="favorite">Favorite</string>
    <string name="all">All</string>
    <string name="video">Video</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="error_stream">Stream load error</string>
    <string name="error_input">Input error</string>
    <string name="error_key">Password Error</string>
    <string name="error_connect">Connect Error</string>
    <string name="error_repeat">Login Repeat</string>
    <string name="input_key">User Name (CASE SENSITIVE)</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="nick_name">NickName</string>
    <string name="phone">Phone</string>
    <string name="input_password">Password (CASE SENSITIVE)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email (CASE SENSITIVE)</string>
    <string name="warning">Warning</string>
    <string name="warning_message">Welcome to BTVi3, By using this service you agree to the Terms of Service (TOS) on Legacy Direct websites. Legacy Direct reserves the right to change the TOS at any time. If you do not agree to any of these terms, please refrain from using the BTVi3 services and products.</string>
    <string name="notice1">The programs shown are from internet and for learning purpose. Please check with Legacy Direct Term Of Service.</string>
    <string name="no_support">Do not support this device</string>
    <string name="legacy_institute">LEGACY\nINSTITUTE</string>
    <string name="game1">GAME</string>
    <string name="download_guide">Please go to app market to download and install </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create an account now</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="username_input_error">User Name input error</string>
    <string name="username_format_error">User Name format error, only accept case letters and numbers</string>
    <string name="first_name_input_error">First Name input error</string>
    <string name="last_name_input_error">Last Name input error</string>
    <string name="nick_name_input_error">Nick Name input error</string>
    <string name="email_different_error">Email input different</string>
    <string name="password_input_error">Password input error</string>
    <string name="password_format_error">Password format error(length >= 6)</string>
    <string name="email_format_error">Email format error</string>
    <string name="phone_input_error">Phone input error</string>
    <string name="phone_format_error">Phone format error(length >= 7)</string>
    <string name="password_input_different">Password input different</string>
    <string name="email_input_error">Email input error</string>
    <string name="register_success">Congratulations! Registration success, please check your email to confirm the activation then login your account.</string>
    <string name="login_repeat">Please contact customer service by email support@legacy.direct or by phone 949 988 9000 (Mon-Fri 9AM-5PM PST) to verify your account and payment information.  </string>
    <string name="account_error">Please contact support@legacy.direct or text to 9499889000 to inquire about this issue.</string>
    <string name="welcome">Hello</string>
    <string name="welcome1">Welcome</string>
    <string name="family">family</string>
    <string name="select_language">Select Language</string>
    <string name="skip_ad">SKIP ADS </string>
    <string name="skip_ad1">JOIN LD GOLD TO SKIP ALL ADS </string>
    <string name="skip">SKIP</string>
    <string name="download_add">Downloading Additional Resources</string>
    <string name="download_wait">please wait till download finish, do not exit</string>
    <string name="clicktoenter">CLICK THE VIDEO TO ENTER B·VISION NETWORK</string>


    <string name="rent_customer">Preferred Customer Program Activation</string>
    <string name="key">Enter PCP Activation Code</string>
    <string name="space" />
    <string name="rent_out_expires">
        Your account balance is due in next three days. Your account will be charged on due date.
        To prevent any lost of service or additional charges ($15 reactivation fee), please make
        sure your payment are on time.
    </string>

    <string name="agree">Agree</string>
    <string name="reject">Reject</string>
    <string name="agreement">BTVi | B•VISION LEGAL STATEMENT</string>
    <string name="agreement_content">
        B•Vision is hosted on our BTVi.  It is legal as long as you use it as intended.
        Like your home computer, you have access to media content via the Internet.
        Much of the content available do require it\'s own license agreements. BTVi is a
        mini-super computer. BTVi operates as an Internet search engine like Google, Bing,
        Yahoo, etc.  The videos are streamed directly from third-party video sharing services.
        BTVi supports the protection of intellectual property.  BTVi and B•Vision are not
        responsible for third party copyright infringement.  All other trademarks, logos,
        and images are the property of their respective and rightful owners.
    </string>
    <string name="ok">OK</string>
    <string name="consent_title">CONSENT TO COLLECTION OF DATA</string>
    <string name="consent_content">
        At Legacy Direct, Data privacy and security is a top priority.  We collect only the
        minimum amount of information necessary to help improve our advertisement, products
        and services.  The data that we collect may include information about your device,
        location, email, application, and browsing habits. This applies to all Apps you have
        installed or may install. We do not share sensitive information.  The data we collect
        may be shared within our group and with select business partners, including those based
        outside United States jurisdiction.   The data privacy regulation that apply in countries
        outside United states jurisdiction may not offer the same level of protection.
        See our Privacy Policy at http://legacy.direct/privacy_policy.html \n

        By selecting “OK” below, you affirm that you are over 18 years of age and consent to
        the collection of data to help improve our advertisement, products and services.
    </string>

    <string name="notice_manual">
        Thank you for purchasing your BTVi3. At Legacy Direct, we strive to provide you with the
        latest streaming technology. From time to time we release updates to improve our products
        and services. To start your streaming adventure please go to the home screen and click on
        Product Manual for guides on our products and customer service. Happy Streaming!
    </string>

</resources>
