<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    android:background="@drawable/bg_dialog"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:text="@string/warning_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_confirm"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_confirm"
        android:textColor="@drawable/bg_text_confirm"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_cancel"
        android:textColor="@drawable/bg_text_cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>


