<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:textSize="18sp"
        android:textColorHint="@color/colorItemGrayBlue"
        android:id="@+id/et_key"
        android:hint="@string/input_key"
        android:background="@color/colorBTV"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <EditText
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorItemGrayBlue"
        android:id="@+id/et_password"
        android:hint="@string/input_password"
        android:background="@color/colorBTV"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <Button
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_login"
        android:textSize="20sp"
        android:text="@string/confirm"
        android:background="@drawable/item_message_bg"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <ProgressBar
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />


</LinearLayout>
