<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <LinearLayout android:orientation="vertical"
        android:background="@drawable/bg_main2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:textSize="22sp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_username"
            android:hint="@string/input_key"
            android:padding="4dp"
            android:background="@drawable/bg_text_view"
            android:textColor="@color/colorWhite"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_first_name"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_first_name"
            android:hint="@string/first_name"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_last_name"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_last_name"
            android:hint="@string/last_name"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_phone"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_phone"
            android:hint="@string/phone"
            android:padding="4dp"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_email"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:padding="4dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_email1"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_email1"
            android:hint="@string/email"
            android:padding="4dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_password"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:padding="4dp"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_text_view"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_password1"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <EditText
            android:padding="4dp"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorItemGrayBlue"
            android:id="@+id/et_password1"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/input_password"
            android:background="@drawable/bg_text_view"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/sp_language"
            android:layout_width="450dp"
            android:layout_height="40dp" />

        <Spinner
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_text_view"
            android:id="@+id/sp_language"
            android:spinnerMode="dialog"
            android:prompt="@string/select_language"
            android:layout_width="450dp"
            android:layout_height="40dp"/>

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:id="@+id/bt_register"
            android:textSize="22sp"
            android:text="@string/register"
            android:textColor="@drawable/bg_text_login"
            android:background="@drawable/bg_btn_login"
            android:layout_width="450dp"
            android:layout_height="45dp" />

        <ProgressBar
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:id="@+id/progress_bar"
            style="@style/progress_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>